# operating_system-darwin

./: ThomasBS.txt
aaa_draw2d_xlib/: draw2d_xlib.cbp  draw2d_xlib_bitmap.cpp  draw2d_xlib_bitmap.h  draw2d_xlib_brush.cpp  draw2d_xlib_dib.cpp  draw2d_xlib_dib.h  draw2d_xlib_graphics.cpp  draw2d_xlib_graphics.h  draw2d_xlib_palette.cpp  draw2d_xlib_palette.h  draw2d_xlib_pen.cpp  draw2d_xlib_region.cpp  draw2d_xlib_region.h  draw2d_xlib_thumbnail_dc.cpp
aaa_node_gnome/: CMakeLists.txt  _factory.cpp  aaa_gdk.cpp  application.cpp  clipboard_data.h  copydesk.cpp  desktop_environment.cpp  desktop_environment.h  display.cpp  display.h  gtk_clipboard.cpp  monitor.cpp  monitor.h  node.cpp  node.h  node_gnome.cbp  notify_icon.cpp  notify_icon.h  user.cpp
aaa_node_gtk/: CMakeLists.txt  _factory.cpp  aaa_gtk_clipboard.cpp  aaa_notify_icon.cpp  aaa_notify_icon.h  application.cpp  copydesk.cpp  desktop_environment.cpp  desktop_environment.h  display.cpp  display.h  gtk_gtk.cpp  gtk_gtk.h  monitor.cpp  monitor.h  node.cpp  node.h  node_gtk.cbp  user.cpp
aaa_node_gtk/aaa_aura/: aaa_gnome.cpp
aaa_node_kde/: CMakeLists.txt  _.cpp  _factory.cpp  application.cpp  copydesk.cpp  desktop_environment.cpp  desktop_environment.h  display.cpp  display.h  monitor.cpp  monitor.h  node.cpp  notify_icon.cpp  user.cpp
aaa_node_xfce/: CMakeLists.txt  _.cpp  _factory.cpp  application.cpp  clipboard_data.h  copydesk.cpp  display.cpp  display.h  monitor.cpp  monitor.h  node.cpp  node.h  notify_icon.cpp  notify_icon.h  user.cpp
aaa_windowing_x11/: CMakeLists.txt  _x11.h  aaa__library.h  buffer.cpp  buffer.h  cursor.cpp  cursor.h  debug.cpp  display.cpp  display.h  icon.cpp  icon.h  keyboard.cpp  keyboard.h  window.cpp  window.h  windowing.cpp  windowing.h  windowing__.h  windowing_x11.cbp  windowing_x11.cpp  windowing_x11.h  x11_simple_ui_display.cpp  x11_simple_ui_display.h  x11_windowing.cpp  xi.cpp
aaa_windowing_x11/aaa_gtk_things/: aaa_copydesk.cpp  aaa_gdk.cpp  aaa_gtk_clipboard.cpp  aaa_node.cpp
aaa_windowing_xcb/: CMakeLists.txt  _.h  buffer.cpp  buffer.h  cursor.cpp  cursor.h  debug.cpp  display.cpp  display.h  icon.cpp  icon.h  keyboard.cpp  keyboard.h  window.cpp  window.h  windowing.cpp  windowing.h  windowing__.h  windowing_xcb.cpp  windowing_xcb.h  windowing_xkb.cpp  xcb_simple_ui_display.cpp  xcb_simple_ui_display.h  xcb_windowing.cpp  xi.cpp
aaa_windowing_xcb/aaa_aura/: aaa_gnome.cpp
aaa_windowing_xcb/aaa_gtk_things/: aaa_application.cpp  aaa_application.h  aaa_clipboard_data.h  aaa_gdk.cpp  aaa_gtk_clipboard.cpp  aaa_node.cpp
acme_darwin/: CMakeLists.txt  File.txt  _.cpp  _.h  _factory.cpp  _library.h  _references.txt  aaa_exception_translator.cpp  aaa_exception_translator.h  aaa_file_memory_map.cpp  aaa_file_memory_map.h  aaa_list_serial_ports.cpp  aaa_node_clang_callstack.cpp  aaa_pipe.cpp  aaa_pipe.h  aaa_process.cpp  aaa_serial.cpp  aaa_stdio_file.cpp  acme_directory.cpp  acme_directory.h  acme_file.cpp  acme_file.h  acme_path.cpp  acme_path.h  acme_posix.cbp  acme_posix.vcxproj  darwin.cpp  darwin.hpp  directory_system.cpp  directory_system.h  exclusive.cpp  exclusive.cpp.1  exclusive.h.1  file_context.cpp  file_context.h  file_system.cpp  file_system.h  list_serial_ports.cpp  move_to_apple_repo_node_process_identifier_modules_paths.cpp  mutex.cpp  (+9 more)
acme_darwin/acme_darwin.xcodeproj/: project.pbxproj
acme_darwin/acme_darwin.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
acme_darwin/acme_darwin.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
acme_darwin/dbus/: gsm_proxy.cpp
acme_darwin/trash_that_is_not_trash/: file_os_watcher.cpp
apex_darwin/: CMakeLists.txt  _.cpp  _.h  _factory.cpp  _references.txt  aaa_datetime.cpp  aaa_datetime.h  aaa_user.cpp  apex_posix.cbp  app_launcher.cpp  app_launcher.h  file_context.cpp  file_context.h  framework.cpp  node.cpp  node.h  nord_apex_posix.vcxproj  nord_apex_posix.vcxproj.filters  os_context.cpp  os_context.h
apex_darwin/aaa_inotify/: watch.cpp  watch.h  watcher.cpp
apex_darwin/aaa_posix_spawn/: process.cpp
apex_darwin/aaa_system_5/: interprocess_base.h  interprocess_caller.cpp  interprocess_target.cpp  interprocess_target.h
apex_darwin/apex_darwin.xcodeproj/: project.pbxproj
apex_darwin/inotify/: watch.h  watcher.cpp
apex_darwin/system_5/: interprocess_caller.cpp  interprocess_target.cpp
audio_alsa/: CMakeLists.txt  _.h  audio_alsa.cbp  snd_pcm.cpp  snd_pcm.h  wave_in.cpp  wave_in.h  wave_out.cpp  wave_out.h
aura_darwin/: CMakeLists.txt  _.h  _factory.cpp  _references.txt  appindicator.h  aura_posix.cbp  clipboard_data.h  node.cpp  node.h  nord_aura_posix.vcxproj  shell.cpp  shell.h
aura_darwin/aura_darwin.xcodeproj/: project.pbxproj
aura_darwin/aura_darwin.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
aura_darwin/aura_darwin.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
aura_darwin/aura_darwin1.xcodeproj/: project.pbxproj
aura_darwin/aura_darwin1.xcodeproj/project.xcworkspace/xcuserdata/camilo.xcuserdatad/: UserInterfaceState.xcuserstate
aura_darwin/aura_darwin1.xcodeproj/xcuserdata/camilo.xcuserdatad/xcschemes/: xcschememanagement.plist
aura_darwin/x11.1/: xim_keyboard.cpp  xim_keyboard.h
darwin/: CMakeLists.txt  arp_a.cpp  arp_a.h
darwin/darwin.xcodeproj/: project.pbxproj
draw2d_xlib/: draw2d_xlib_bitmap.cpp  draw2d_xlib_dib.cpp  draw2d_xlib_graphics.cpp  draw2d_xlib_graphics.h  draw2d_xlib_thumbnail_dc.cpp
node_gnome/: copydesk.cpp  gtk_clipboard.cpp
node_gtk/: CMakeLists.txt  aaa_gtk_clipboard.cpp  application.cpp  copydesk.cpp  node.cpp
node_kde/: CMakeLists.txt  copydesk.cpp
node_xfce/: copydesk.cpp  node.cpp
windowing_x11/: CMakeLists.txt  buffer.cpp  cursor.cpp  keyboard.cpp  window.cpp  windowing_x11.cpp
windowing_xcb/: buffer.cpp  keyboard.cpp  window.cpp  windowing.cpp  windowing__.h  windowing_xcb.cpp
write_text_pango/: CMakeLists.txt  _draw2d_gdiplus_vs12.vcxproj  write_text_pango.cbp  write_text_pango.vcxproj
(+4 files in other folders)
